@@ -33,6 +33,7 @@ version 1.4.2
 8410							: repobrowser, trailing slash, emtpy-named dir
 8432							: shortcut url
 8436							: stats-by-date messed up
+8438							: "next 100" and sorting
 
 version 1.4.1
 7516							: bugtraq:message with only %BUGID% and bugtraq:number as true
